2012-03-20  Nick Alcock  <nick.alcock@oracle.com>

	Changes for easier stress-testing.

	* GNUmakefile (check): Reformulate in terms of check-verbose.
	(check-installed): Reformulate in terms of check-installed-verbose.
	(check-verbose): Pass in RUNTESTFLAGS.
	(check-installed-verbose): Likewise.
	(check-*-stress): New targets for testing in parallel with stress
	tests: skips stressful tests that allocate a lot of memory.

	* runtest.sh: New --testsuites= option, constraining test execution
	to specific subdirectories of test/.

	* test/{act,buf,builtin,dt_test,dtrace,fbt,intro,io,ip,lockstate,out,
	proc,profile,sched,script,sdt,spec,struct,sysinfo}/*: Move under
	test/demo.
	* test/{dif,regression}/*: Move under test/unittest.
	* test/unittest/buffering/*.resize*: Move under stress/buffering.
	* test/{demo,unittest,stress}/README: New, describe these testsuites.

2012-03-19  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace-utils.spec: Call ldconfig when necessary.
	This is v0.2.5-2.

2012-03-13  Nick Alcock  <nick.alcock@oracle.com>

	* NEWS: Mention shared library support.
	* GNUmakefile: This is v0.2.5.
	* dtrace-utils.spec: Likewise.

2012-03-10  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build: Overwrite already-existing stale shared-
	library symlinks.
	* dtrace-utils.spec: We have a .so now, not a .a.

2012-03-08  Nick Alcock  <nick.alcock@oracle.com>

	Shared library support.

	* README.build-system: Document it.

	* Makerules (libs): Rename to...
	(build-libs): ... this.  Adjust for _TARGET suffix-derivation.
	(libs): New.  Build installable static libraries.
	(shlibs): New. Build shared libraries.
	(PHONIES): Updated.
	(TARGETS): Likewise.

	* Makefunctions (cc-template): Allow specification of call-
	dependent flags.
	(lib-template): Rename to...
	(build-lib-template): ... this.  Adjust for _TARGET suffix-
	derivation.  Prefix the library name with build- automatically.
	Pass in -fPIC to cc-template.